--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   "author": "dmorah.com",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "express": "^4.17.1",
-    "webpack": "^5.12.1",
-    "webpack-cli": "^4.3.1"
+    "@babel/core": "7.12.10",
+    "@babel/node": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
+    "babel-loader": "8.2.2",
+    "express": "4.17.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "webpack": "5.12.1",
+    "webpack-cli": "4.3.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "nodemon": "^2.0.7",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.17.0",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "nodemon": "2.0.7",
     "prettier": "2.2.1"
   }
 }
