--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "nodemon --exec babel-node src/server/server.js --ignore dist/",
+    "dev:server": "nodemon --exec babel-node src/server/server.js --ignore dist/ ",
     "dev:bundler": "webpack -w --mode=development"
+
   },
   "keywords": [],
   "author": "dmorah.com",
@@ -20,15 +21,20 @@
     "express": "4.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "webpack": "5.12.1",
     "webpack-cli": "4.3.1"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
+    "css-loader": "^5.0.1",
     "eslint": "7.17.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "mini-css-extract-plugin": "^1.3.4",
     "nodemon": "2.0.7",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "sass-loader": "^10.1.1",
+    "sass": "^1.32.4",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.12.1"
   }
 }
