--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "5.0.1",
     "eslint": "7.17.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "mini-css-extract-plugin": "^1.3.4",
+    "mini-css-extract-plugin": "1.3.4",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
-    "sass-loader": "^10.1.1",
-    "sass": "^1.32.4",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.12.1"
+    "sass-loader": "10.1.1",
+    "sass": "1.32.4",
+    "style-loader": "2.0.0",
+    "webpack": "5.12.1"
   }
 }
