--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "nodemon --exec babel-node src/server/server.js --ignore dist/ ",
     "dev:bundler": "webpack -w --mode=development"
-
   },
   "keywords": [],
   "author": "dmorah.com",
@@ -17,14 +16,21 @@
     "@babel/node": "7.12.10",
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.12.10",
-    "babel-loader": "8.2.2",
+    "@babel/runtime": "^7.12.5",
+    "axios": "^0.21.1",
     "express": "4.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "webpack-cli": "4.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "babel-core": "^6.26.3",
     "babel-eslint": "10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "5.0.1",
     "eslint": "7.17.0",
     "eslint-plugin-react": "7.22.0",
@@ -32,8 +38,8 @@
     "mini-css-extract-plugin": "1.3.4",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
-    "sass-loader": "10.1.1",
     "sass": "1.32.4",
+    "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
     "webpack": "5.12.1"
   }
